<resources>
    <string name="app_name">雷神 || Pigeon</string>
    <string name="app_name_short">Pigeon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_blank_fragment">Welcome home!</string>
    <string name="weather_blank_fragment">It\'s raining</string>
    <string name="contacts_blank_fragment">You don\'t have any friends :(</string>
    <string name="chat_blank_fragment">No friends no chat</string>
    // For registration page
    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    // For sign in page
    <string name="action_forgot_password"><u>Forgot password?</u></string>
    <string name="action_remember_me">Remember me</string>
    <string name="action_register_short">Register</string>
    <string name="action_signIn">Sign In</string>
    <string name="action_resend_link"><u>Resend link</u></string>
    // For forgot/change password pages
    <string name="title_forgot_password"><b>Forgot password?</b></string>
    <string name="title_change_password"><b>Change Password</b></string>
    <string name="action_change_password">Change Password</string>
    <string name="action_send_forgot_password">Request a reset link</string>
    <string name="hint_password_current">Enter your current password</string>
    <string name="hint_password_new">Enter your new password</string>
    <string name="hint_password_new_again">Retype your new password</string>
    // For nav bar
    <string name="title_home">HOME</string>
    <string name="title_weather">WEATHER</string>
    <string name="title_contacts">CONTACTS</string>
    <string name="title_chat">CHAT</string>
    // For email page
    <string name="title_email_verify"><b>Email sent</b></string>
    <string name="description_email_confirmation">We sent an email to ? with a link to ...</string>
    <string name="action_email_verify">Back to sign in</string>
    // For options menu
    <string name="action_dark_mode">Enable Dark Mode</string>
    <string name="action_sign_out">Sign out</string>
    // For search bar
    <string name="title_search">Search</string>

    //For weather
    <string name="hint_city_name">Enter City Name or Zipcode</string>
    <string name="title_city_name">City Name</string>
    <string name="text_curr_condition">Cloudy</string>
    <string name="text_curr_temperature">Temperature</string>
    <string name="title_hourly_forecast">HOURLY FORECAST</string>
    <string name="title_7_day_forecast">7 - DAY FORECAST</string>
    <string name="title_conditions">CONDITIONS</string>
    <string name="title_humidity">Humidity</string>
    <string name="title_windspeed">Wind Speed</string>
    <string name="title_sunset">Sunset</string>
    <string name="title_sunrise">Sunrise</string>
    <string name="title_feels_like">Feels Like</string>
    <string name="title_uvi">UVI</string>
    <string name="title_hilo">LO | HI °F</string>

    // For shared preferences
    <string name="keys_shared_prefs">Shared Prefs</string>
    <string name="keys_prefs_jwt">Shared Prefs JWT</string>
    <string name="keys_prefs_dark_mode">Shared Prefs Dark</string>
    // For HTTP requests

    <string name="base_url">https://team-4-tcss-450-web-service.herokuapp.com/</string>
    // IDK
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_maps">MapsActivity</string>


    <string name="recent_message_test">
        test test test test test test test
    </string>
    <string name="action_remove_from_chat">Remove from chat</string>
    <string name="action_set_host">Set Host</string>
    <string name="do_you_want_to_delete_this_contact">Do you want to delete this contact?</string>
    <string name="friend_request">Friend Request</string>

</resources>