<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegistrationFragment">

    <Button
        android:id="@+id/button_register"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/action_register_short"
        app:layout_constraintStart_toStartOf="@+id/edit_password_2"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_2" />

    <EditText
        android:id="@+id/edit_first"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_first"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edit_last"
        app:layout_constraintStart_toStartOf="@+id/edit_last" />

    <EditText
        android:id="@+id/edit_last"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/hint_last"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <EditText
        android:id="@+id/edit_password_2"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_password_again"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/edit_password_1"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_1" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/edit_last"
        app:layout_constraintTop_toBottomOf="@+id/edit_last" />

    <EditText
        android:id="@+id/edit_password_1"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

</androidx.constraintlayout.widget.ConstraintLayout>