<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.changePassword.ChangePasswordFragment">

    <Button
        android:id="@+id/button_request"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:text="@string/action_change_password"
        app:layout_constraintStart_toStartOf="@+id/edit_password_3"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_3" />

    <EditText
        android:id="@+id/edit_password_1"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_password_current"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/edit_password_2"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_password_new"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/edit_password_1"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_1" />

    <EditText
        android:id="@+id/edit_password_3"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_password_new_again"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/edit_password_2"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_2" />

    <TextView
        android:id="@+id/text_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_change_password"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/edit_password_1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="After successfully changing your password, you must sign-in using your new password."
        app:layout_constraintStart_toStartOf="@+id/edit_password_1"
        app:layout_constraintTop_toBottomOf="@+id/text_change_password" />

</androidx.constraintlayout.widget.ConstraintLayout>